rnsc/test_data/integration/error/parser/class_header/access_flags/varargs.rns
.class varargs HelloWorld
.super java/lang/Object
.class_end
